# ChessConsoleProject

./: .gitignore  CMakeLists.txt  README.md
include/: chess.h  game_data.h  types.h
src/: chess.cpp  game_data.cpp  main.cpp
src/board/: board.cpp  board.hpp
src/game_data/: game_data.cpp  game_data.h
src/piece/: piece.cpp  piece.hpp
tests/: test_chess.cpp
